# r5sr

./: .gitignore  README.md  alsasink  cyclone_dds_config.xml  depends.yaml  justfile  r5sr.rosinstall  r5sr_control_teleop.rosinstall  r5sr_robot.rosinstall
.devcontainer/: devcontainer-lock.json  devcontainer.json  postCreateCommand.sh
.gitlab/issue_templates/: Bug.md  Feature.md
crawler-control/: CMakeLists.txt  package.xml
crawler-control/src/: crawler-node.cpp
crawler_control/: CMakeLists.txt  package.xml
crawler_control/cmake/: FindEPOS_CMD.cmake
crawler_control/config/: params.yaml
crawler_control/launch/: crawler_joy_launch.py  crawler_launch.py
crawler_control/src/: crawler_node.cpp
docs/: how_to_use_foxglove.md
install-scripts/: aliases-bringup  aliases-teleop  bashrc-teleop  install-aliases  install-all  install-apt-tools  install-control-teleop  install-epos-command-library  install-robot  install-udev-rules
install-scripts/bash-settings/: aliases-teleop  bashrc-bringup
install-scripts/rules/: 99-cameras.rules  99-rt-9axisimu.rules
manipulator-control/: CMakeLists.txt  README.md  package.xml
r5sr/: CMakeLists.txt  package.xml
r5sr_bringup/: README.md  package.xml
r5sr_bringup/config/: r5sr_camera.yaml
r5sr_bringup/launch/: r5sr_bringup.launch.xml
r5sr_crawler_control/: CMakeLists.txt  README.md  package.xml
r5sr_crawler_control/config/: r5sr_crawler_control.yaml
r5sr_crawler_control/include/r5sr_crawler_control/: r5sr_crawler_control.hpp
r5sr_crawler_control/launch/: r5sr_crawler_control.launch.xml
r5sr_crawler_control/src/: r5sr_crawler_control.cpp  r5sr_crawler_control_node.cpp
r5sr_description/: CMakeLists.txt  README.md  package.xml
r5sr_description/launch/: display.launch.py
r5sr_description/meshes/: flipper.stl
r5sr_description/ros2_control/: r5sr_ros2_control.xacro
r5sr_description/rviz/: r5sr_servo_teleop.rviz  run_move_group.rviz  servo_with_camera.rviz  teleop_rviz_config.rviz  urdf.rviz
r5sr_description/urdf/: materials.xacro  r5sr.trans  r5sr.xacro  r5sr_arm.urdf  r5sr_arm_simple.urdf  r5sr_description.xacro
r5sr_detection_3d/: package.xml
r5sr_interface/: CMakeLists.txt
r5sr_interface/msg/: CrawlerMode.msg  CrawlerSpeed.msg  OperationMode.msg  TeleopMode.msg
r5sr_manipulator_control/: CMakeLists.txt
r5sr_manipulator_control/include/: move_with_jointstate.hpp
r5sr_manipulator_control/src/: move_with_jointstate.cpp  move_with_jointstate_node.cpp
r5sr_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
r5sr_moveit_config/config/: fake_controllers.yaml  gazebo_r5sr.urdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  r5sr.ros2_control.xacro  r5sr.srdf  r5sr.urdf.xacro  r5sr_controllers.yaml  r5sr_ros_controllers.yaml  r5sr_simulated_config.yaml  ros2_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
r5sr_moveit_config/launch/: .r5sr_servo_teleop.launch.py.swp  demo.launch.py  move_group.launch.py  moveit_demo.launch.py  r5sr_servo_teleop.launch.py  r5sr_servo_teleop_withjoy.launch.py  rsp.launch.py  test.launch.py  warehouse_db.launch.py
r5sr_moveit_teleop/: CMakeLists.txt  README.md  package.xml
r5sr_moveit_teleop/config/: arm_servo.yaml  r5sr_simulated_config.yaml  r5sr_simulated_config_sub.yaml
r5sr_moveit_teleop/launch/: servo.launch.py
r5sr_moveit_teleop/src/: .joystick_servo.cpp.swp  joystick_servo.cpp  preset_pose.cpp  sub_manipulator_control.cpp  sub_manipulator_control_simple.cpp
r5sr_rviz_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
r5sr_rviz_plugins/src/: detection_panel.cpp  detection_panel.hpp  (+5 more)
r5sr_teleop/: CMakeLists.txt  README.md  package.xml
r5sr_teleop/config/: r5sr_teleop.yaml
r5sr_teleop/include/r5sr_teleop/: remap_joy.hpp
r5sr_teleop/launch/: r5sr_teleop.launch.xml  servo.launch.py
r5sr_teleop/rqt/: r5sr_cam.perspective  r5sr_cam_vsting.perspective  vision_front.perspective
r5sr_teleop/rviz/: r5sr_teleop.rviz  r5sr_teleop_exp.rviz
r5sr_teleop/src/: flir_ax8_rtsp.cpp  remap_joy.cpp  remap_joy_node.cpp
scripts/: install-robot  install-udev-rules  setup.sh
src/r5sr_cloud/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/r5sr_cloud/include/r5sr_cloud/: rms_plant.hpp  rms_robot.hpp
src/r5sr_cloud/r5sr_cloud/: rms_plant.py  rms_robot.py  rms_ros2_client_eqpt_updater.py
src/r5sr_cloud/src/: rms_plant.cpp  rms_robot.cpp
src/r5sr_crawler_control/: CMakeLists.txt  package.xml
src/r5sr_crawler_control/include/r5sr_crawler_control/: r5sr_crawler_control.hpp
src/r5sr_crawler_control/src/: r5sr_crawler_control.cpp  r5sr_crawler_control_node.cpp
src/r5sr_interface/: CMakeLists.txt  package.xml
src/r5sr_interface/msg/: ManipulatorSpeed.msg
src/r5sr_moveit_teleop/: CMakeLists.txt
src/r5sr_moveit_teleop/config/: overhead_arm_servo.yaml
src/r5sr_moveit_teleop/src/: preset_pose.cpp  sub_manipulator_control.cpp  sub_manipulator_control_simple.cpp
src/r5sr_qr_detecter/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/r5sr_qr_detecter/launch/: qr_detecter.launch.py
src/r5sr_qr_detecter/r5sr_qr_detecter/: qr_detector_node.py
src/r5sr_qr_detecter/src/: main.cpp
src/r5sr_teleop/: CMakeLists.txt  README.md  package.xml
src/r5sr_teleop/config/: drone_cam.yaml  r5sr_teleop.yaml  rms_cloud.yaml
src/r5sr_teleop/config/yolo/: gauge_analysis.pt  hazmat2024-0421-yolov8m.pt  hazmat2024-0421.pt  robocup-hazmat-label-2022.yaml  rrl_hazmat_label_2024.pt
src/r5sr_teleop/config/yolo/cfg/: robocup-hazmat-label-train.cfg
src/r5sr_teleop/include/r5sr_teleop/: flir_ax8_rtsp.hpp  joy2command.hpp
src/r5sr_teleop/launch/: cloud.launch.py  hazmat_yolov3.launch.py  image_motion.launch.py  rms_inspection.launch.py  rviz_moveit.launch.py  servo.launch.py  teleop.foxglove.launch.py  teleop.launch.py  teleop.rviz.launch.py
src/r5sr_teleop/rqt/: r5sr_cam_exp.perspective
src/r5sr_teleop/rviz/: cam_view.rviz
src/r5sr_teleop/src/: alert_battery.cpp  flir_ax8_rtsp.cpp  joy2command.cpp  joy2command_node.cpp
(+95 files in other folders)
