<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r5sr</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="robohase01@gmail.com">hasegawa</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>r5sr_bringup</exec_depend>
  <exec_depend>r5sr_crawler_control</exec_depend>
  <exec_depend>r5sr_description</exec_depend>
  <exec_depend>r5sr_manipulator_control</exec_depend>
  <exec_depend>r5sr_moveit_config</exec_depend>
  <exec_depend>r5sr_moveit_teleop</exec_depend>
  <exec_depend>r5sr_rviz_plugins</exec_depend>
  <exec_depend>r5sr_teleop</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
