<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r5sr_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="robohase01@gmail.com">hasegawa</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>usb_cam</exec_depend>
  <exec_depend>zbar_ros</exec_depend>
  <exec_depend>epos</exec_depend>
  <exec_depend>r5sr_manipulator_control</exec_depend>
  <exec_depend>audio_capture</exec_depend>
  <exec_depend>audio_play</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
