<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r5sr_teleop</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nexisr2016@gmail.com">Nexis-R</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>r5sr_interface</depend>
  <depend>libopencv-dev</depend>
  <depend>libopencv-imgproc-dev</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>python3-opencv</depend>
  <depend>rviz_2d_overlay_msgs</depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_2d_overlay_plugins</exec_depend>
  <exec_depend>audio_capture</exec_depend>
  <exec_depend>audio_play</exec_depend>
  <exec_depend>r5sr_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>